# Vulkan-SimpleDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  main.cpp  vktoolkit.hpp
Vk/: Definition.cpp  Definition.hpp  Device.cpp  Device.hpp  Instance.cpp  Instance.hpp
Vk/Buffer/: StagingBuffer.cpp  StagingBuffer.h
shaders/: img.comp  shader.comp  shader.frag  shader.vert
